--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 
 
 </head>
-<body class="mat-app-background" style="height: 100vh">
+<body style="height: 100vh; margin: 0">
   <app-root></app-root>
 </body>
 </html>
